--- a/back/package.json
+++ b/back/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/GrischK/Exercices-Alternance#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "sqlite3": "^5.0.11",
     "typeorm": "^0.3.9"
